--- a/packages/tcf-client/package.json
+++ b/packages/tcf-client/package.json
@@ -3,6 +3,11 @@
   "name": "tcf-client",
   "version": "1.0.0",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "lodash": "^4.17.15",
+    "purecss": "^1.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
