--- a/tcf-configs.json
+++ b/tcf-configs.json
@@ -1,5 +1,5 @@
 {
   "TCF_CLIENT_BOT_USERNAME": "",
-  "TCF_CLIENT_BOT_PASSWORD": "",
+  "TCF_CLIENT_BOT_TOKEN": "",
   "TCF_CLIENT_BOT_CHANNEL": ""
 }
